@@ -327,6 +327,10 @@
       gives the number of \dQuote{used} observations for such models --
       somewhat experimentally.% and hence not yet on ../src/library/stats/man/arima.Rd
       This fixes \PR{16198}, quite differently than proposed there.
+
+      \item The \code{print()} method for \code{"pairwise.htest"}
+      objects now obeys \code{getOption("digits")}, yielding more digits
+      than by default when the option is correspondingly larger.
     }
   }
 
